TestRepo2/src/objects/Kit_Item__c.object
<CustomObject>
    <description>POS Project: junction object that represents the many-to-many relationship between Items, indicating which items are part of a kit</description>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>Item__r.Program__r.Brand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Kits</relationshipLabel>
        <relationshipName>Kits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Kit__c</fullName>
        <label>Kit</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Kit Items</relationshipLabel>
        <relationshipName>Kit_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Packout_Quantity__c</fullName>
        <label>Packout Quantity</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Image__c</fullName>
        <formula>Item__r.Product_Image__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <formula>Item__r.Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <label>Kit Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>KIT-{00000000}</displayFormat>
        <label>Kit Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kit Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Required_Packout_Quantity</fullName>
        <active>true</active>
        <description>Enforces the Item to have a Packout Quantity. Intended for integration via API.</description>
        <errorConditionFormula>ISBLANK(Packout_Quantity__c)</errorConditionFormula>
        <errorDisplayField>Packout_Quantity__c</errorDisplayField>
        <errorMessage>Please provide a value for the Packout Quantity</errorMessage>
    </validationRules>
</CustomObject>